kubernetes/argocd/applications/network/gateways/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: network
  annotations:
    gatus.home-operations.com/guarded: "true"
    gatus.home-operations.com/endpoint: |
      dns:
        query-name: "[DOMAIN]"
        query-type: A
      url: "1.1.1.1"
      conditions:
        - "len([BODY]) == 0"
      alerts:
        - type: pushover
          send-on-resolved: true
          failure-threshold: 3
          success-threshold: 5
spec:
  gatewayClassName: traefik
  addresses:
    - type: IPAddress
      value: 192.168.7.4
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.vaderrp.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vaderrp-com-production-tls
